examples/test/testpolicy1953.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1953
  namespace: namespace297
spec:
  podSelector:
    matchLabels:
      key36: value6
      key48: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value13
          key21: value27
      podSelector:
        matchLabels:
          key15: value28
          key30: value36
